k8s/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xg-tsla-svc
  namespace: xgao-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xg-tsla-svc
  template:
    metadata:
      labels:
        app: xg-tsla-svc
    spec:
      automountServiceAccountToken: false
      imagePullSecrets:
        - name: ghcr-login # 👈 刚才你在终端创建的 Secret 名字
      containers:
        - name: app
          image: ghcr.io/lookmail88/xg-tsla-svc:v0.4.4
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config-volume
              mountPath: /app/config/application.yml # 挂载的具体目标路径
              subPath: application.yml       # 对应 ConfigMap 里的 Key
          resources:
            requests:
              memory: 512Mi
              cpu: 0.5
              ephemeral-storage: "2Gi"
            limits:
              memory: 1024Mi
          # --- 添加以下环境变量配置 ---
      volumes:
        - name: config-volume
          configMap:
            name: xg-tsla-svc-dev-config         # 必须对应上面 ConfigMap 的 metadata.name
