k8s/dev/timescaledb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timescaledb
  namespace: xgao-dev
spec:
  type: NodePort
  selector:
    app: timescaledb
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
      nodePort: 30432
