k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xg-tsla-svc-ingress
  namespace: xgao-dev
spec:
  rules:
    - host: api-dev.xuyang.dev
      http:
        paths:
          - path: /xg-tsla-svc
            pathType: Prefix
            backend:
              service:
                name: xg-tsla-svc
                port:
                  number: 8080
